@@ -84,7 +84,7 @@ GLADE_CB void
 rbm_delete_var1_activate(GtkMenuItem* menuitem, gpointer user_data)
 {
 	tilp_calc_del_var();
-	remote.memory.ram_used = ticalcs_dirlist_mem_used(remote.var_tree);
+	remote.memory.ram_used = ticalcs_dirlist_ram_used(remote.var_tree);
 
 	labels_refresh();
 	ctree_refresh();
