@@ -2,6 +2,10 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
+	- use reworked dirlist API
+	- updated TiLP to follow the slightly modified FLASH app dirlist format
+
 - 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
 	- fixed USB device reconnection
 	- reworked device box: display detected USB device in a list as well as full probing list.
